--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,11 +1,12 @@
-# Copy to .env and set values. Never commit .env with real secrets.
-# Database (PostgreSQL)
+# Copy to .env for local dev. In production set these in your host (never commit .env with real secrets).
+
+# PostgreSQL (use SSL in production: ?sslmode=require)
 DATABASE_URL=postgresql://postgres:admin@localhost:5432/chat_application
 
-# JWT (use a strong secret in production: openssl rand -hex 32)
+# JWT: generate a strong key for production: openssl rand -hex 32
 SECRET_KEY=change-me-in-production-use-openssl-rand-hex-32
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 
-# CORS allowed origins (comma-separated)
+# Comma-separated allowed origins (your frontend URL in production)
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
